fix: Don't force dark mode

--- a/src/global.css
+++ b/src/global.css
@@ -6,10 +6,6 @@
 @tailwind components;
 @tailwind utilities;
 
-html {
-  color-scheme: dark;
-}
-
 @font-face {
   font-family: "Astro";
   src: url("/fonts/astro/astro.otf");
